# jasmine

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: CPU_hours investigator.ipynb  LXLO_relaunch.py  cumulative_distribution_and_histograms_representativesample.ipynb  data_challenge_to_RTModel.ipynb  generating_lightcurves_from_rtmodel_templates.ipynb  get_VBM_orbit.py  getting_information_about_a_lightcurve.ipynb  q_and_s_comparison.ipynb  reading_rtmodel_models.ipynb  reading_the_data_challenge.ipynb  source_trajectory_caustics.ipynb  windows_linux_comparison.ipynb
files_organizer/: data_challenge_prep.py  data_challenge_reader.py  lightcurve_cls.py
jasmine/: __init__.py
jasmine/caustics/: caustic_creator_cls.py
jasmine/classes_and_files_reader/: RTModel_results_cls.py  RTModel_results_reader.py  datachallenge_lightcurve_cls.py  gullsrges_lightcurve_cls.py  gullsrges_reader.py  mass_ratio_and_separation_getter.py  new_gullsrges_lightcurve_cls.py  new_gullsrges_reader.py  parallax_getter.py  rtmodel_template_cls.py
jasmine/constants/: general_physics_constants.py
jasmine/file_readers_and_classes/: RTModel_results_reader.py  datachallenge_lightcurve_cls.py
jasmine/files_organizer/: .data_challenge_to_RTModel.py.swp  RTModel_ephemerides_tools.py  data_challenge_prep.py  data_challenge_to_RTModel.py  gulls_rges_to_RTModel.py  ld_parameters.py  lightcurve_cls.py  moa9yr_to_RTModel.py  moa_ian_reduced_to_RTModel.py  new_data_files_for_pylima.py  new_gulls_rges_to_RTModel.py  new_gulls_sample_prioritizer.py  (+2 more)
(+67 files in other folders)
