[project]
name = "jasmine-astro"
dynamic = ["version"]
description = "JASMINE: Joint Analysis of Simulations for Microlensing INterest Events'"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Stela IS", email = "stela.ishitanisilva@nasa.gov" },
    { name = "Jon H" },
    { name = "CR" },
    { name = "JASMINE authors" },
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.4",
    "jupyter>=1.0.0",
    "notebook>=7.1.3",
    "ipykernel>=6.29.4",
    "matplotlib>=3.8.4",
    "astropy>=6.1.0",
    "jplephem>=2.22",
    "bokeh==3.4.1",
    "VBMicrolensing>=4.1.0",
    "moana-pypi>=0.2.2",
    "RTModel>=2.4.0"
]

[project.urls]
Homepage = "https://github.com/stelais/jasmine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/jasmine/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jasmine"]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"